--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -160,3 +160,7 @@ jobs:
           path: llm/llama.cpp/build/rocm
       - run: go build
       - run: go test -v ./...
+      - uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.os }}-binaries
+          path: ollama
